--- a/styles/web_page.css
+++ b/styles/web_page.css
@@ -17,13 +17,15 @@ body {
 	'overflow: hidden;' is disabled.
     */
     height: 100%;
+    margin: 0px 5px 0px 5px;
 }
 html {
     height: 100%;
 }
 
 #main-container {
-    height: 100%;
+    height: 90%;
+    padding-top: 10px;
 }
 
 /* AFD styles */
@@ -31,8 +33,11 @@ html {
     float: right;
     font-family: Arial, Helvetica, sans-serif;
     height: 80%;
-    margin-top: 7px;
-    width: 29%;
+    margin: 7px 0px 0px 0px;
+    width: 30%;
+}
+.afd-widget fieldset {
+    margin: 0px;
 }
 #afd-tabs {
     overflow: auto;
@@ -43,8 +48,7 @@ html {
     border-style: solid;
     border-width: 1px;
     float: left;
-    margin-right: 3px;
-    margin-top: 9px;
+    width: 69%;
     z-index: 1;
 }
 .leaflet-interactive {
@@ -91,16 +95,26 @@ html {
     border: 1px solid #1a8cff;
     cursor: default;
 }
+/* Place crosshair at the center of the leaflet map */
+#crosshair img {
+	position: absolute;
+	margin: 0;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+	z-index: 1000;
+}
 
 /*  Ontology graph styles */
 #example {
     display: none;
-    height: 90.55%;
+    height: 100%;
     float: left;
     margin-right: 5px;
     margin-top: 9px;
     position: relative;
-    width: 70%;
+    width: 69%;
 }
 #graph {
     display: none;
@@ -174,4 +188,22 @@ html {
     top: 0;
     width: 100%;
     z-index: 50000;
+}
+#txtbox-container {
+    float: right;
+    width: 30%;
+}
+#txtbox-Latitude {
+	float: right;
+	text-align: center;
+}
+#txtbox-Longitude {
+	float: right;
+	text-align: center;
+}
+#txtbox-text-lat {
+    float: left;
+}
+#txtbox-text-long {
+    float: left;
 }
